still need help on a couple questions

--- a/Review-Exam2/HTML-CSS/HTML.html
+++ b/Review-Exam2/HTML-CSS/HTML.html
@@ -2,11 +2,41 @@
 
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="stylesheet.css"
+    <link rel="stylesheet" href="stylesheet.css" />
     <meta charset="utf-8" />
-    <title></title>
+   
 </head>
 <body>
-    Hello World!!
+    <h1>HW5- Taylor LaBrie</h1>
+
+    <div id="card1">
+        <div class = "container">
+            <a target="_blank" href="https://ou.edu">OU</a>
+        </div>
+        <div class="container">
+            <a target="_blank" href="https://classnav.ou.edu">ClassNav</a>
+        </div>
+        <div class="container">
+            <a target="_blank" href="https://one.ou.edu">OU ONE</a>
+        </div>
+
+     </div>
+
+    <div id="card2">
+
+        <img src="https://media.giphy.com/media/kiBcwEXegBTACmVOnE/giphy.gif" alt="Avatar" >
+
+    </div>
+    <div id="card3">
+
+
+       <img src="https://media.giphy.com/media/WXB88TeARFVvi/giphy.gif" alt="Avatar">
+    </div>
+    <div id="card4">
+
+
+         <img src="https://media.giphy.com/media/Y4pAQv58ETJgRwoLxj/giphy.gif" alt="Avatar" >
+    </div>
+
 </body>
 </html>
